<resources>
    <string name="app_name">province safi</string>
    <string-array name="spi1">
        <item>Hay Salam</item>
        <item>Miftah Lkhir</item>
        <item>Hay Andalouse</item>
        <item>SidiAbdelkrim</item>
        <item>AlMassira</item>
        <item>Nouvelle Ville</item>
    </string-array>
    <string-array name="spi2">
        <item>Conduite</item>
        <item>Conduite1</item>
        <item>Conduite2</item>
        <item>Conduite3</item>
        <item>Conduite4</item>
        <item>Conduite5</item>
        <item>Conduite6</item>
        <item>Conduite7</item>
    </string-array>
    <string-array name="spi3">
        <item>Commune1</item>
        <item>Commune2</item>
        <item>Commune3</item>
        <item>Commune4</item>
        <item>Commune5</item>
        <item>Commune6</item>
        <item>Commune7</item>
    </string-array>
    <string name="col0">id</string>

    <string name="col1">Cin</string>
    <string name="col2">Name</string>
    <string name="col3">Type</string>
    <string name="col4">Adresse</string>
    <string name="col6">Date</string>
    <string name="col7">Procés verbal</string>
    <string name="col8">Action</string>
    <string name="register">REGISTER</string>
    <string name="login_email_hint">Email</string>
    <string name="login_password_hint">Password</string>
    <string name="signup_login_hint">Already have an account? Sign In</string>
    <string name="login_signup_hint">Don\'t have an account? Sign Up</string>
    <string name="title_activity_main4">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
</resources>